--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -65,8 +65,8 @@ spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.quitwait=false
-spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
-spring.mail.properties.mail.smtp.socketFactory.fallback=false
+#spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
+spring.mail.properties.mail.smtp.socketFactory.fallback=true
 
 cors.allowedOrigins=${CORS_ALLOWED_ORIGINS:}
 cors.allowedMethods=${CORS_ALLOWED_METHODS:}
