--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -62,7 +62,7 @@ spring.mail.port=${MAIL_PORT:25}
 spring.mail.username=${MAIL_USERNAME}
 spring.mail.password=${MAIL_PASSWORD}
 spring.mail.protocol=smtp
-spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.quitwait=false
 #spring.mail.properties.mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
