--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,8 +17,8 @@ spring.jackson.deserialization.ACCEPT_FLOAT_AS_INT=false
 spring.jackson.serialization.INDENT_OUTPUT=true
 spring.jackson.serialization.WRITE_DATES_AS_TIMESTAMPS=false
 
-spring.jpa.generate-ddl=false
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.generate-ddl=true
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.implicit-strategy=org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
 spring.jpa.hibernate.naming.physical-strategy=org.openlmis.notification.util.CustomPhysicalNamingStrategy
 spring.jpa.hibernate.jdbc.time_zone=UTC
